major db integration work

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -27,12 +27,12 @@
 
 <h3>How do we get in contact with you?</h3>
 
-
-<a mailto="harlan@datacommunitydc.org">harlan@datacommunitydc.org</a>
+<p>Spam away at the emails below! All joking aside, we would love to hear from you.</p>
+harlan [@] datacommunitydc.org
 <br/>
-<a mailto="seanm@datacommunitydc.org">seanm@datacommunitydc.org</a>
+seanm [@] datacommunitydc.org
 <br/>
-<a mailto="marck@datacommunitydc.org">marck@datacommunitydc.org</a>
+marck [@] datacommunitydc.org
 
 <div class="span-24 last">
   <hr/>
