--- a/templates/results.html
+++ b/templates/results.html
@@ -134,17 +134,17 @@ var labels = ['', '', '', ''],
 
 // size and margins for the chart
 var margin = {top: 20, right: 20, bottom: 20, left: 20}
-  , width = 400 - margin.left - margin.right
-  , height = 400 - margin.top - margin.bottom;
+  , width = 360 - margin.left - margin.right
+  , height = 360 - margin.top - margin.bottom;
 
 // x and y scales, I've used linear here but there are other options
 // the scales translate data values to pixel values for you
 var x = d3.scale.linear()
-          .domain([-d3.max(xdata), d3.max(xdata)])  // the range of the values to plot
+          .domain([-d3.max(xdata)-0.5, d3.max(xdata)+0.5])  // the range of the values to plot
           .range([ 0, width ]);        // the pixel range of the x-axis
 
 var y = d3.scale.linear()
-          .domain([-d3.max(ydata), d3.max(ydata)])
+          .domain([-d3.max(ydata)-0.5, d3.max(ydata)+0.5])
           .range([ height, 0 ]);
 
 // the chart object, includes all margins
@@ -156,12 +156,27 @@ var chart = d3.select("#selfid")
 
 // the main object where the chart and axis will be drawn
 var main = chart.append('g')
-.attr('transform', 'translate(' + margin.left + ',' + margin.top + ')')
-.attr('width', width)
-.attr('height', height)
-.attr('class', 'main')   
+  .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')')
+  .attr('width', width)
+  .attr('height', height)
+  .attr('class', 'main')   
+
+var myLine = chart.append("svg:line")
+    .attr("x1", x(0)+margin.left)
+    .attr("y1", y(ydata[0])+margin.top)
+    .attr("x2", x(0)+margin.left)
+    .attr("y2", y(ydata[2])+margin.top)
+    .style("stroke", "black");
+
+var myLine = chart.append("svg:line")
+    .attr("x1", x(xdata[1])+margin.left)
+    .attr("y1", y(0)+margin.bottom)
+    .attr("x2", x(xdata[3])+margin.left)
+    .attr("y2", y(0)+margin.bottom)
+    .style("stroke", "black");
 
 // draw the x axis
+/*
 var xAxis = d3.svg.axis()
 .scale(x)
 .orient('bottom');
@@ -170,8 +185,9 @@ main.append('g')
 .attr('transform', 'translate(0,' + height + ')')
 .attr('class', 'main axis date')
 .call(xAxis);
-
+*/
 // draw the y axis
+/*
 var yAxis = d3.svg.axis()
 .scale(y)
 .orient('left');
@@ -180,7 +196,7 @@ main.append('g')
 .attr('transform', 'translate(0,0)')
 .attr('class', 'main axis date')
 .call(yAxis);
-
+*/
 // draw the graph object
 var g = main.append("svg:g"); 
 
@@ -189,9 +205,10 @@ g.selectAll("scatter-dots")
   .enter().append("svg:circle")  // create a new circle for each value
       .attr("cy", function (d) { return y(d); } ) // translate y value to a pixel
       .attr("cx", function (d,i) { return x(xdata[i]); } ) // translate x value
-      .attr("r", 30) // radius of circle
+      .attr("r", function(d,i) {return data[i].value *20} ) // radius of circle
       .style("opacity", 0.8) // opacity of circle
-      .style("fill", function(d, i) { return colors[i]; });
+      .style("fill", function(d, i) { return colors[i]; })
+      .enter().append("svg:text").text("test");
 
 </script>
 <script type="text/javascript">
