revamped radar chart, configuration control, and bug fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<p>Answer questions about how you rank your skills and how you think of yourself, and get a badge and a description of _your_ type of Data Scientist!</p>
-<p>Needs a couple of sentences about where the data to do this came from, and a link to an About page with more details of the survey, who's behind it, links to the DC2 blog post and my talk, etc.
-<a href = "http://datacommunitydc.org/">Random link to DatacommunityDC.org</a>
+<p>There is a debate raging (ok, maybe not raging) about what it means to be a data scientist. Do you work with data? any data? ever? Are you a researcher? scientist? economist? computer scientist? Have you ever labeled yourself a data scientist?  Could you spot one from a distance? Help us quantitatively determine what a data scientist is by taking a brief and fun survey. Why? Because without data, you are just another person with an opinion (also, we will present the results of the survey at a future DC Data Science meetup!)</p>
+
+<p>Just in case you were wondering, we will **NEVER** publish or provide to any third party unaggregated responses or identifying data.  If we learn anything astonishingly insightful, we will most definitely share this information with you (assuming you actually complete the survey and offer your email).</p>
+
+<p><a href = "http://datacommunitydc.org/">Random link to DatacommunityDC.org</a>
 </p>
 
 <a href="{{ url_for('q1') }}" class="extralarge awesome green">Get Started</a>
