--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,11 +34,11 @@
     <div class="span-23 last">
       <div class="span-17">
         <br/>
-        <h1>Data Scientist Badges</h1>
-        <h3>Make a badge of your skills and your self-identification!</h3>
+        <h1>Data Scientist Survey</h1>
+        <h3>What kind of Data Scientist are you?</h3>
       </div>
       <div class="span-6 last">
-        <a href="http://datacommunitydc.org/"><img src="{{ url_for('static', filename='DC2logo-cluster-name-100px.png') }}"/></a>
+        <a href="http://datacommunitydc.org/"><img style="margin-top:25px;" src="{{ url_for('static', filename='DC2logo-cluster-name-100px.png') }}"/></a>
       </div>
     </div>
     <hr/>
