--- a/templates/question1.html
+++ b/templates/question1.html
@@ -24,11 +24,11 @@
 	<h2>Rank your Skills</h2>
 	<div class="demo span-24 last" style="min-height:0px;">
 		<h4>Drag the items from the <font style="color:red;"><strong>left column</strong></font> to the <font style="color:green;"><strong>right column</strong></font>. Place your best skills at the top.</h4>
-		<ul id="sortable1" class="connectedSortable" style="border:1px solid red;">
+		<ul id="sortable1" class="connectedSortable" style="border:1px solid red; min-height:40px; min-width:422px;">
 			<li class="ui-state-default"><em>Algorithms</em> (ex: computational complexity, CS theory)<input id="id_name" name="id_name" type="hidden" value="0"/></li>
-			<li class="ui-state-default"><em>Back-End Programming</em> (ex: JAVA/C++/Objective C)<input id="id_name" name="id_name" type="hidden" value="1" /></li>
+			<li class="ui-state-default"><em>Back-End Programming</em> (ex: JAVA/Rails/.NET)<input id="id_name" name="id_name" type="hidden" value="1" /></li>
 			<li class="ui-state-default"><em>Bayesian/Monte-Carlo Statistics</em> (ex: MCMC, BUGS)<input id="id_name" name="id_name" type="hidden" value="2" /></li>
-			<li class="ui-state-default"><em>Big and Distributed Data</em> (ex: Hadoop, Map/Reduce)<input id="id_name" name="id_name" type="hidden" value="3" /></li>
+			<li class="ui-state-default"><em>Big and Distributed Data</em> (ex: Hadoop, HBase)<input id="id_name" name="id_name" type="hidden" value="3" /></li>
 			<li class="ui-state-default"><em>Business</em> (ex: management, business development, budgeting)<input id="id_name" name="id_name" type="hidden" value="4" /></li>
 			<li class="ui-state-default"><em>Classical Statistics</em> (ex: general linear model, ANOVA)<input id="id_name" name="id_name" type="hidden" value="5" /></li>
 			<li class="ui-state-default"><em>Data Manipulation</em> (ex: regexes, R, SAS, web scraping)<input id="id_name" name="id_name" type="hidden" value="6" /></li>
