--- a/templates/results.html
+++ b/templates/results.html
@@ -46,7 +46,11 @@
 
 <div class="span-24 last">
   <hr/>
-  <h2>Spread the love ...  INSERT TWITTER BUTTONS</h2>
+  <h2>Spread the love ...  
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://survey.datacommunitydc.org/" data-text="What type of data scientist are you?" data-via="sayhitosean" data-size="large" data-related="datacommunitydc">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+  </h2>
 </div>
 
 
@@ -140,7 +144,7 @@
 var labels = ['Businessperson', 'Creative', 'Researcher', 'Engineer'],
     xdata = [0, {{session['self_id_score'][1]}}, 0, -{{session['self_id_score'][3]}}],
     ydata = [{{session['self_id_score'][0]}}, 0, -{{session['self_id_score'][2]}}, 0],
-    colors = ["tan", "lightgreen", "lightblue", "yellow"];
+    colors = ["tan", "darkseagreen", "steelblue", "goldenrod"];
 
 
 // size and margins for the chart
