aligning text and images

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -36,17 +36,17 @@ marck [@] datacommunitydc.org
 
 <div class="span-24 last">
   <hr/>
-  <h2>Return to your survey results. <a href="{{ url_for('start') }}" class="large awesome">Your Results</a></h2>
+  <span style="font-size:32px; vertical-align:top;">Return to your survey results. <a href="{{ url_for('start') }}" class="large awesome">Your Results</a></span>
 </div>
 
 <div class="span-24 last">
   <hr/>
-  <h2>Want more information about the survey? <a href="{{ url_for('surveydetails') }}" class="large awesome red">Survey Details</a></h2>
+  <span style="font-size:32px; vertical-align:top;">Want more information about the survey? <a href="{{ url_for('surveydetails') }}" class="large awesome red">Survey Details</a></span>
 </div>
 
 <div class="span-24 last">
   <hr/>
-  <h2>A glutton for punishment? <a href="{{ url_for('reset') }}" class="large awesome green">Retake the Quiz!</a></h2>
+  <span style="font-size:32px; vertical-align:top;">A glutton for punishment? <a href="{{ url_for('reset') }}" class="large awesome green">Retake the Quiz!</a></span>
 </div>
 
 {% endblock %}
