--- a/templates/surveydetails.html
+++ b/templates/surveydetails.html
@@ -57,17 +57,17 @@
 
 <div class="span-24 last">
   <hr/>
-  <h2>Return to your survey results. <a href="{{ url_for('start') }}" class="large awesome">Your Results</a></h2>
+  <span style="font-size:32px; vertical-align:top;">Return to your survey results. <a href="{{ url_for('start') }}" class="large awesome">Your Results</a></span>
 </div>
 
 <div class="span-24 last">
   <hr/>
-  <h2>Have some questions about your results? <a href="{{ url_for('faq') }}" class="large awesome blue">FAQ</a></h2>
+  <span style="font-size:32px; vertical-align:top;">Have some questions about your results? <a href="{{ url_for('faq') }}" class="large awesome blue">FAQ</a></span>
 </div>
 
 
 <div class="span-24 last">
   <hr/>
-  <h2>A glutton for punishment? <a href="{{ url_for('reset') }}" class="large awesome green">Retake the Quiz!</a></h2>
+  <span style="font-size:32px; vertical-align:top;">A glutton for punishment? <a href="{{ url_for('reset') }}" class="large awesome green">Retake the Quiz!</a></span>
 </div>
 {% endblock %}
