--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,10 +14,11 @@ p, table, hr, .box { margin-bottom:25px; }
 .box p { margin-bottom:10px; }
 
 .awesome, .awesome:visited {
-
+	margin-top:10px;
+	margin-left:20px;
 	background: #222 url(alert-overlay.png) repeat-x; 
 	display: inline-block; 
-	padding: 5px 10px 6px; 
+	padding: 5px 10px 5px; 
 	color: #fff; 
 	text-decoration: none;
 	-moz-border-radius: 5px; 
@@ -30,23 +31,24 @@ p, table, hr, .box { margin-bottom:25px; }
 	cursor: pointer;
 }
 
-	.awesome:hover							{ background-color: #111; color: #fff; }
-	.awesome:active							{ top: 1px; }
-	.small.awesome, .small.awesome:visited 			{ font-size: 11px; padding: ; }
-	.awesome, .awesome:visited,
-	.medium.awesome, .medium.awesome:visited 		{ font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
-	.large.awesome, .large.awesome:visited 			{ font-size: 14px; padding: 8px 14px 9px; }
-	.extralarge.awesome, .extralarge.awesome:visited { font-size: 24px; padding: 10px 20px; }
-	.green.awesome, .green.awesome:visited		{ background-color: #009900; }
-	.green.awesome:hover						{ background-color: #006600; }
-	.blue.awesome, .blue.awesome:visited		{ background-color: #2daebf; }
-	.blue.awesome:hover							{ background-color: #007d9a; }
-	.red.awesome, .red.awesome:visited			{ background-color: #e33100; }
-	.red.awesome:hover							{ background-color: #872300; }
-	.magenta.awesome, .magenta.awesome:visited		{ background-color: #a9014b; }
-	.magenta.awesome:hover							{ background-color: #630030; }
-	.orange.awesome, .orange.awesome:visited		{ background-color: #ff5c00; }
-	.orange.awesome:hover							{ background-color: #d45500; }
-	.yellow.awesome, .yellow.awesome:visited		{ background-color: #ffb515; }
-	.yellow.awesome:hover							{ background-color: #fc9200; }
-		</style>
+.awesome:hover							{ background-color: #111; color: #fff; }
+.awesome:active							{ top: 1px; }
+.small.awesome, .small.awesome:visited 	{ font-size: 11px; padding: ; }
+.awesome, .awesome:visited,
+.medium.awesome, .medium.awesome:visited { font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
+.large.awesome, .large.awesome:visited 	{ font-size: 14px; padding: 8px 14px 8px; }
+.extralarge.awesome, .extralarge.awesome:visited { font-size: 24px; padding: 10px 20px; }
+.green.awesome, .green.awesome:visited	{ background-color: #009900; }
+.green.awesome:hover					{ background-color: #006600; }
+.blue.awesome, .blue.awesome:visited	{ background-color: #2daebf; }
+.blue.awesome:hover						{ background-color: #007d9a; }
+.red.awesome, .red.awesome:visited		{ background-color: #e33100; }
+.red.awesome:hover						{ background-color: #872300; }
+.magenta.awesome, .magenta.awesome:visited	{ background-color: #a9014b; }
+.magenta.awesome:hover						{ background-color: #630030; }
+.orange.awesome, .orange.awesome:visited	{ background-color: #ff5c00; }
+.orange.awesome:hover						{ background-color: #d45500; }
+.yellow.awesome, .yellow.awesome:visited	{ background-color: #ffb515; }
+.yellow.awesome:hover						{ background-color: #fc9200; }
+
+</style>
