db update - added color text fix and tshape faq anchor

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -9,7 +9,7 @@
 
 <p>We compared your responses to clusters of responses from the survey. The names of the clusters are our own and are intended to be descriptive of their components. We welcome suggestions for better names!</p>
 
-<h3>What does the <a href="http://en.wikipedia.org/wiki/T-shaped_skills">T-Shaped Skills</a> Chart mean? Why is it upside down?</h3>
+<h3 id = "tshaped">What does the <a href="http://en.wikipedia.org/wiki/T-shaped_skills">T-Shaped Skills</a> Chart mean? Why is it upside down?</h3>
 
 <p>It's a summary of your Skills rankings based on the five categories of Skill Groups we identified from the survey data. Longer bars indicate Skill Groups whose component skills you ranked higher. It's upside-down because we find the notion of <a href="http://en.wikipedia.org/wiki/T-shaped_skills">T-shaped skills</a> particularly appealing for Data Scientists.</p>
 
