--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,7 @@
 
 
 <div class="span-10 prepend-1 colborder">
-  <h3 style="text-align:center"><a href="http://en.wikipedia.org/wiki/T-shaped_skills" target="_blank" >Skills T-Chart</a></h3>
+  <h3 style="text-align:center"><a href="{{url_for('faq',_anchor="tshaped") }}" target="_blank" >Skills T-Chart</a></h3>
   <div id="t-shaped"></div>
 </div>
 <div class="span-11  last">
